tests/FSharp.Compiler.ComponentTests/Conformance/TypeForwarding/NegativeCases/Delegate_NG_TurnToClass.fs
let f = new TurnsToClass()
let dele = new DeleTurnsToClass(f.getValue)
let rv = dele.Invoke()

exit rv
